# samurai-tensorrt

./: README.md  first_frame_bbox.txt
cpp/: CMakeLists.txt  main.cpp
cpp/include/: engine.h  sam2_tracker.h
cpp/src/: engine.cpp  sam2_tracker.cpp
python/: main.py
